# Cpp-Candlestick-Chart-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: README.md
src/: main.cpp
src/backend/: CSVDataLoader.cpp  CSVDataLoader.h  DataRepository.cpp  DataRepository.h
src/common/: DateTime.cpp  DateTime.h  OHLCVBar.h  TradingSession.cpp  TradingSession.h  Types.h
src/frontend/assets/: Colors.h
src/frontend/chart/: CandleRenderer.cpp  CandleRenderer.h  ChartPanel.cpp  ChartPanel.h  ChartScaler.cpp  ChartScaler.h  PriceAxis.cpp  PriceAxis.h  TimeAxis.cpp  TimeAxis.h
src/frontend/chart/gl/: GLCandleRenderer.cpp  GLCandleRenderer.h  GLContext.cpp  GLContext.h
src/frontend/models/: ChartModel.cpp  ChartModel.h
src/frontend/ui/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h
tests/: CSVDataLoaderTests.cpp  ChartScalerTests.cpp  DataRepositoryTests.cpp  DateTimeTests.cpp  SampleDataGeneratorTests.cpp  TempCsvFile.h
tools/: SampleDataGenerator.cpp  SampleDataGenerator.h  generate_sample_data_main.cpp
